--- a/bluetooth-low-energy/Cargo.toml
+++ b/bluetooth-low-energy/Cargo.toml
@@ -1,52 +1,44 @@
 [package]
-name = "bluetooth-low-energy"
-version = "0.1.0"
 edition = "2021"
+name    = "bluetooth-low-energy"
+version = "0.1.0"
+
+[[bin]]
+name = "bluetooth-low-energy"
+path = "./src/bin/main.rs"
 
 [dependencies]
-esp-backtrace = { version = "0.14.2", features = [
-    "esp32",
-    "exception-handler",
-    "panic-handler",
-    "println",
+bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
+  "async",
+  "macros",
 ] }
-
-esp-hal = { version = "0.22.0", features = ["esp32"] }
-esp-println = { version = "0.12.0", features = ["esp32", "log"] }
-log = { version = "0.4.21" }
-esp-alloc = { version = "0.5.0" }
+critical-section = "1.2.0"
+defmt = "0.3.10"
+embassy-executor = { version = "0.7.0", features = [
+  "defmt",
+  "task-arena-size-20480",
+] }
+embassy-time = "0.4.0"
 embedded-io = "0.6.1"
-
 embedded-io-async = "0.6.1"
-
-esp-wifi = { version = "0.11.0", default-features = false, features = [
-    "esp32",
-    "utils",
-    "ble",
-    "esp-alloc",
-    "log",
+esp-alloc = "0.7.0"
+esp-hal = { version = "1.0.0-beta.0", features = [
+  "defmt",
+  "esp32",
+  "unstable",
+] }
+esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
+esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
+esp-wifi = { version = "0.13.0", features = [
+  "ble",
+  "builtin-scheduler",
+  "defmt",
+  "esp-alloc",
+  "esp32",
 ] }
 heapless = { version = "0.8.0", default-features = false }
-smoltcp = { version = "0.11.0", default-features = false, features = [
-    "medium-ethernet",
-    "proto-dhcpv4",
-    "proto-igmp",
-    "proto-ipv4",
-    "socket-dhcpv4",
-    "socket-icmp",
-    "socket-raw",
-    "socket-tcp",
-    "socket-udp",
-] }
-bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
-    "macros",
-    "async",
-] }
-embassy-executor = { version = "0.6.0", features = ["task-arena-size-12288"] }
-embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }
-esp-hal-embassy = { version = "0.5.0", features = ["esp32"] }
 static_cell = { version = "2.1.0", features = ["nightly"] }
-critical-section = "1.2.0"
+
 
 [profile.dev]
 # Rust debug is too slow.
@@ -54,10 +46,10 @@ critical-section = "1.2.0"
 opt-level = "s"
 
 [profile.release]
-codegen-units = 1        # LLVM can perform better optimizations using a single thread
-debug = 2
+codegen-units    = 1     # LLVM can perform better optimizations using a single thread
+debug            = 2
 debug-assertions = false
-incremental = false
-lto = 'fat'
-opt-level = 's'
-overflow-checks = false
+incremental      = false
+lto              = 'fat'
+opt-level        = 's'
+overflow-checks  = false
