--- a/pir-sensor/Cargo.toml
+++ b/pir-sensor/Cargo.toml
@@ -1,17 +1,22 @@
 [package]
-edition = "2021"
-name    = "pir-sensor"
-version = "0.1.0"
+edition      = "2024"
+name         = "pir-sensor"
+rust-version = "1.88"
+version      = "0.1.0"
 
 [[bin]]
 name = "pir-sensor"
 path = "./src/bin/main.rs"
 
 [dependencies]
+esp-hal = { version = "1.0.0", features = ["defmt", "esp32"] }
+
+
+defmt                  = "1.0.1"
+esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
+
 critical-section = "1.2.0"
-defmt            = "0.3.10"
-esp-hal          = { version = "1.0.0-beta.0", features = ["defmt", "esp32"] }
-esp-println      = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
+esp-println      = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
 
 
 [profile.dev]
