--- a/ldr-dracula/Cargo.toml
+++ b/ldr-dracula/Cargo.toml
@@ -1,21 +1,23 @@
 [package]
-edition = "2021"
-name    = "ldr-dracula"
-version = "0.1.0"
+edition      = "2024"
+name         = "ldr-dracula"
+rust-version = "1.88"
+version      = "0.1.0"
 
 [[bin]]
 name = "ldr-dracula"
 path = "./src/bin/main.rs"
 
 [dependencies]
+esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }
+
+
+defmt                  = "1.0.1"
+esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
+
 critical-section = "1.2.0"
-defmt = "0.3.10"
-esp-hal = { version = "1.0.0-beta.0", features = [
-  "defmt",
-  "esp32",
-  "unstable",
-] }
-esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
+esp-println      = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
+
 nb = "1.1.0"
 
 [profile.dev]
