--- a/wifi-async-http/Cargo.toml
+++ b/wifi-async-http/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
-edition = "2021"
+edition = "2024"
 name = "wifi-async-http"
+rust-version = "1.88"
 version = "0.1.0"
 
 [[bin]]
@@ -8,8 +9,21 @@ name = "wifi-async-http"
 path = "./src/bin/main.rs"
 
 [dependencies]
-defmt = "0.3.10"
-embassy-net = { version = "0.6.0", features = [
+esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }
+
+esp-rtos = { version = "0.2.0", features = [
+  "defmt",
+  "embassy",
+  "esp-alloc",
+  "esp-radio",
+  "esp32",
+] }
+
+defmt = "1.0.1"
+esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
+
+embassy-net = { version = "0.7.1", features = [
+  "defmt",
   "dhcpv4",
   "medium-ethernet",
   "tcp",
@@ -17,32 +31,21 @@ embassy-net = { version = "0.6.0", features = [
   #addition:
   "dns",
 ] }
-embedded-io = "0.6.1"
-embedded-io-async = "0.6.1"
-esp-alloc = "0.7.0"
-esp-hal = { version = "1.0.0-beta.0", features = [
-  "defmt",
-  "esp32",
-  "unstable",
-] }
-esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
+embedded-io = { version = "0.7.1", features = ["defmt"] }
+embedded-io-async = { version = "0.7.0", features = ["defmt"] }
+esp-alloc = { version = "0.9.0", features = ["defmt"] }
+esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
 # for more networking protocol support see https://crates.io/crates/edge-net
-critical-section = "1.2.0"
-embassy-executor = { version = "0.7.0", features = [
-  "defmt",
-  "task-arena-size-32768",
-] }
-embassy-time = "0.4.0"
-esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
-esp-wifi = { version = "0.13.0", features = [
-  "builtin-scheduler",
+embassy-executor = { version = "0.9.1", features = ["defmt"] }
+embassy-time = { version = "0.5.0", features = ["defmt"] }
+esp-radio = { version = "0.17.0", features = [
   "defmt",
   "esp-alloc",
   "esp32",
   "smoltcp",
+  "unstable",
   "wifi",
 ] }
-heapless = { version = "0.8.0", default-features = false }
 smoltcp = { version = "0.12.0", default-features = false, features = [
   "defmt",
   "medium-ethernet",
@@ -58,7 +61,10 @@ smoltcp = { version = "0.12.0", default-features = false, features = [
   # addition:
   "dns-max-server-count-4",
 ] }
-static_cell = { version = "2.1.0", features = ["nightly"] }
+
+critical-section = "1.2.0"
+static_cell = "2.1.1"
+
 reqwless = { version = "0.13.0", default-features = false, features = [
   "embedded-tls",
 ] }
