--- a/sdcard-read/Cargo.toml
+++ b/sdcard-read/Cargo.toml
@@ -1,32 +1,33 @@
 [package]
-edition = "2021"
-name = "sdcard-read"
-version = "0.1.0"
+edition      = "2024"
+name         = "sdcard-read"
+rust-version = "1.88"
+version      = "0.1.0"
 
 [[bin]]
 name = "sdcard-read"
 path = "./src/bin/main.rs"
 
 [dependencies]
+esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }
+
+esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32"] }
+
+defmt                  = "1.0.1"
+esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
+
+embassy-executor = { version = "0.9.1", features = ["defmt"] }
+embassy-time     = { version = "0.5.0", features = ["defmt"] }
+esp-println      = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
+
 critical-section = "1.2.0"
-defmt = "0.3.10"
-embassy-executor = { version = "0.7.0", features = [
-  "defmt",
-  "task-arena-size-20480",
-] }
-embassy-time = "0.4.0"
-esp-hal = { version = "1.0.0-beta.0", features = [
-  "defmt",
-  "esp32",
-  "unstable",
-] }
-esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
-esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
-static_cell = { version = "2.1.0", features = ["nightly"] }
+static_cell      = "2.1.1"
+
 # sd card driver
-embedded-sdmmc = "0.8.1"
+embedded-sdmmc = "0.9.0"
 # To convert Spi bus to SpiDevice
 embedded-hal-bus = "0.3.0"
+
 
 [profile.dev]
 # Rust debug is too slow.
@@ -34,10 +35,10 @@ embedded-hal-bus = "0.3.0"
 opt-level = "s"
 
 [profile.release]
-codegen-units = 1        # LLVM can perform better optimizations using a single thread
-debug = 2
+codegen-units    = 1     # LLVM can perform better optimizations using a single thread
+debug            = 2
 debug-assertions = false
-incremental = false
-lto = 'fat'
-opt-level = 's'
-overflow-checks = false
+incremental      = false
+lto              = 'fat'
+opt-level        = 's'
+overflow-checks  = false
