--- a/rfid-change-key/Cargo.toml
+++ b/rfid-change-key/Cargo.toml
@@ -1,28 +1,28 @@
 [package]
-edition = "2021"
-name    = "rfid-read"
-version = "0.1.0"
+edition      = "2024"
+name         = "rfid-change-key"
+rust-version = "1.88"
+version      = "0.1.0"
 
 [[bin]]
-name = "rfid-read"
+name = "rfid-change-key"
 path = "./src/bin/main.rs"
 
 [dependencies]
+esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }
+
+esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32"] }
+
+defmt                  = "1.0.1"
+esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
+
+embassy-executor = { version = "0.9.1", features = ["defmt"] }
+embassy-time     = { version = "0.5.0", features = ["defmt"] }
+esp-println      = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
+
 critical-section = "1.2.0"
-defmt = "0.3.10"
-embassy-executor = { version = "0.7.0", features = [
-  "defmt",
-  "task-arena-size-20480",
-] }
-embassy-time = "0.4.0"
-esp-hal = { version = "1.0.0-beta.0", features = [
-  "defmt",
-  "esp32",
-  "unstable",
-] }
-esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
-esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
-static_cell = { version = "2.1.0", features = ["nightly"] }
+static_cell      = "2.1.1"
+
 mfrc522 = "0.8.0"
 embedded-hal-bus = "0.3.0"
 
