--- a/bluetooth-low-energy/Cargo.toml
+++ b/bluetooth-low-energy/Cargo.toml
@@ -1,43 +1,52 @@
 [package]
-edition = "2021"
-name    = "bluetooth-low-energy"
-version = "0.1.0"
+edition      = "2024"
+name         = "bluetooth-low-energy"
+rust-version = "1.88"
+version      = "0.1.0"
 
 [[bin]]
 name = "bluetooth-low-energy"
 path = "./src/bin/main.rs"
 
 [dependencies]
-bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
-  "async",
-  "macros",
-] }
-critical-section = "1.2.0"
-defmt = "0.3.10"
-embassy-executor = { version = "0.7.0", features = [
+esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }
+
+esp-rtos = { version = "0.2.0", features = [
   "defmt",
-  "task-arena-size-20480",
-] }
-embassy-time = "0.4.0"
-embedded-io = "0.6.1"
-embedded-io-async = "0.6.1"
-esp-alloc = "0.7.0"
-esp-hal = { version = "1.0.0-beta.0", features = [
-  "defmt",
+  "embassy",
+  "esp-alloc",
+  "esp-radio",
   "esp32",
-  "unstable",
 ] }
-esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
-esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
-esp-wifi = { version = "0.13.0", features = [
+
+defmt                  = "1.0.1"
+esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
+
+bt-hci = "0.6.0"
+embassy-executor = { version = "0.9.1", features = ["defmt"] }
+embassy-time = { version = "0.5.0", features = ["defmt"] }
+embedded-io = { version = "0.7.1", features = ["defmt"] }
+embedded-io-async = { version = "0.7.0", features = ["defmt"] }
+esp-alloc = { version = "0.9.0", features = ["defmt"] }
+esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
+esp-radio = { version = "0.17.0", features = [
   "ble",
-  "builtin-scheduler",
   "defmt",
   "esp-alloc",
   "esp32",
+  "unstable",
 ] }
-heapless = { version = "0.8.0", default-features = false }
-static_cell = { version = "2.1.0", features = ["nightly"] }
+trouble-host = { version = "0.5.0", features = ["gatt", "defmt", "derive"] }
+
+critical-section = "1.2.0"
+static_cell      = "2.1.1"
+
+
+embassy-futures = "0.1.1"
+
+# Requires for gatt_server macro to work
+embassy-sync = { version = "0.7" }
+
 
 
 [profile.dev]
