--- a/lcd-hello/Cargo.toml
+++ b/lcd-hello/Cargo.toml
@@ -1,31 +1,32 @@
 [package]
-edition = "2021"
-name = "lcd-hello"
-version = "0.1.0"
+edition      = "2024"
+name         = "lcd-hello"
+rust-version = "1.88"
+version      = "0.1.0"
 
 [[bin]]
 name = "lcd-hello"
 path = "./src/bin/main.rs"
 
 [dependencies]
+esp-hal = { version = "1.0.0", features = ["defmt", "esp32", "unstable"] }
+
+esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32"] }
+
+defmt                  = "1.0.1"
+esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }
+
+embassy-executor = { version = "0.9.1", features = ["defmt"] }
+embassy-time     = { version = "0.5.0", features = ["defmt"] }
+esp-println      = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
+
 critical-section = "1.2.0"
-defmt = "0.3.10"
-embassy-executor = { version = "0.7.0", features = [
-    "defmt",
-    "task-arena-size-20480",
-] }
-embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
-esp-hal = { version = "1.0.0-beta.0", features = [
-    "defmt",
-    "esp32",
-    "unstable",
-] }
-esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
-esp-println = { version = "0.13.0", features = ["defmt-espflash", "esp32"] }
-static_cell = { version = "2.1.0", features = ["nightly"] }
+static_cell      = "2.1.1"
+
 hd44780-driver = { git = "https://github.com/JohnDoneth/hd44780-driver", rev = "9009f2c24771ba0a20f8f7534471c9869188f76c", features = [
     "embedded-hal-async",
 ] }
+
 
 [profile.dev]
 # Rust debug is too slow.
@@ -33,10 +34,10 @@ hd44780-driver = { git = "https://github.com/JohnDoneth/hd44780-driver", rev = "
 opt-level = "s"
 
 [profile.release]
-codegen-units = 1        # LLVM can perform better optimizations using a single thread
-debug = 2
+codegen-units    = 1     # LLVM can perform better optimizations using a single thread
+debug            = 2
 debug-assertions = false
-incremental = false
-lto = 'fat'
-opt-level = 's'
-overflow-checks = false
+incremental      = false
+lto              = 'fat'
+opt-level        = 's'
+overflow-checks  = false
